Verkefni 5/mooshak/user_files/admin/1/1/__results__
Compiler error
--
Compiler error: user_files\admin\1\1\myclass.cpp: In member function 'std::__cxx11::string myClass::hello()':
user_files\admin\1\1\myclass.cpp:5:1: error: expected ';' before '}' token
 }
 ^
user_files\admin\1\1\myclass.cpp: In member function 'std::__cxx11::string myClass::hello(std::__cxx11::string)':
user_files\admin\1\1\myclass.cpp:9:1: error: expected ';' before '}' token
 }
 ^
user_files\admin\1\1\myclass.cpp: In member function 'std::__cxx11::string myClass::there()':
user_files\admin\1\1\myclass.cpp:13:1: error: expected ';' before '}' token
 }
 ^

--
Hello

--
Compiler error: user_files\admin\1\1\myclass.cpp: In member function 'std::__cxx11::string myClass::hello()':
user_files\admin\1\1\myclass.cpp:5:1: error: expected ';' before '}' token
 }
 ^
user_files\admin\1\1\myclass.cpp: In member function 'std::__cxx11::string myClass::hello(std::__cxx11::string)':
user_files\admin\1\1\myclass.cpp:9:1: error: expected ';' before '}' token
 }
 ^
user_files\admin\1\1\myclass.cpp: In member function 'std::__cxx11::string myClass::there()':
user_files\admin\1\1\myclass.cpp:13:1: error: expected ';' before '}' token
 }
 ^

--
Hello there
Hello there

--
Compiler error: user_files\admin\1\1\myclass.cpp: In member function 'std::__cxx11::string myClass::hello()':
user_files\admin\1\1\myclass.cpp:5:1: error: expected ';' before '}' token
 }
 ^
user_files\admin\1\1\myclass.cpp: In member function 'std::__cxx11::string myClass::hello(std::__cxx11::string)':
user_files\admin\1\1\myclass.cpp:9:1: error: expected ';' before '}' token
 }
 ^
user_files\admin\1\1\myclass.cpp: In member function 'std::__cxx11::string myClass::there()':
user_files\admin\1\1\myclass.cpp:13:1: error: expected ';' before '}' token
 }
 ^

--
there

--
Compiler error: user_files\admin\1\1\myclass.cpp: In member function 'std::__cxx11::string myClass::hello()':
user_files\admin\1\1\myclass.cpp:5:1: error: expected ';' before '}' token
 }
 ^
user_files\admin\1\1\myclass.cpp: In member function 'std::__cxx11::string myClass::hello(std::__cxx11::string)':
user_files\admin\1\1\myclass.cpp:9:1: error: expected ';' before '}' token
 }
 ^
user_files\admin\1\1\myclass.cpp: In member function 'std::__cxx11::string myClass::there()':
user_files\admin\1\1\myclass.cpp:13:1: error: expected ';' before '}' token
 }
 ^

--
Hello Hrafn
